Port Animated Inventory to Fabric 1.20.1
Build this target independently from the repository root while preserving
NeoForge 1.21.1 on main. Include target configuration, documentation and
separate development validation fixtures.

Validation: standalone test build passed (95 tests); port client and
dedicated-server evidence is retained in docs/evidence/ports.